# playground

./: CMakeLists.txt  CMakePresets.json  copy_assets.cmake
include/: Cell.hpp  Figure.hpp  Game.hpp  Grid.hpp  Settings.hpp
src/: Cell.cpp  Figure.cpp  Game.cpp  Grid.cpp  main.cpp
